--- a/produktuak.css
+++ b/produktuak.css
@@ -135,6 +135,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 30px;
 }
 .botones{
     text-align: center;
