--- a/promozioak.css
+++ b/promozioak.css
@@ -359,3 +359,8 @@ details[open] summary:hover, summary:hover {
 summary, .logos a {
     border: 1px solid #e0e0e0;
 }
+.oharlegalak a {
+    color: white;
+    justify-content: center;
+    display: block;
+}
