--- a/web/promozioak.css
+++ b/web/promozioak.css
@@ -234,10 +234,9 @@ details[open] summary:hover, summary:hover {
 .escaparate {
     display: flex;
     gap: 100px;
-    max-width: 1200px;
     align-items: center;
+    justify-content: center;
     padding: 0 20px;
-    margin-left: 11%;
 }
 
 .tarjeta {
