--- a/saskia.css
+++ b/saskia.css
@@ -125,6 +125,13 @@ img:hover {
 }
 
 
+body h1 {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 36px;
+    color: #333333; 
+}
+
 
 
 
