--- a/web/guriburuz.css
+++ b/web/guriburuz.css
@@ -197,6 +197,9 @@ section h2 {
     font-size: 3rem; 
     margin-bottom: 10px; 
 }
+.carrito span {
+    font-size: 20px;
+}
 .contenedor h3 { 
     font-size: 1.1rem; 
     margin-bottom: 5px; 
